# mwdcmconverter

./: .gitignore  CMakeLists.txt  MwDcmConverter.pro  README.md  defaults.pri
app/: app.pro  dcmconverter.cpp  main.cpp  mwdcmconverter.cpp  mwdcmconverter.h
ext/: CMakeLists.txt
src/: CMakeLists.txt  mwcsv.cpp  mwcsv.h  mwimage.cpp  mwimage.h  mwresolution.cpp  mwresolution.h  src.pro  utils.cpp  utils.h
